# RecoFin

./: .gitignore  api.py  demo_app.py  dramatic_bank.csv  dramatic_book.csv  generate_demo_data.py  pyproject.toml  scripts_render_graph.py  test_bank.csv  test_book.csv
.github/workflows/: ci.yml
agentic_recon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datagents/: data_subgraph.py  observability.py  resilience.py  schemas.py
datagents/agents/: ingestion_agent.py  normalization_agent.py  validation_agent.py
datagents/eval/: __init__.py  fixtures.py  run_data_agent_evals.py
datagents/tests/: test_alias_memory.py  test_api_sftp_tools.py  test_csv_read_tool.py  test_data_agent_evals.py  test_data_subgraph.py  test_golden_data.py  test_ingestion_agent.py  test_ingestion_observability.py  test_ingestion_retry.py  test_normalization.py  test_resilience.py  test_schemas.py  test_source_drift_matrix.py  test_validation.py
datagents/tools/: alias_store.py  (+8 more)
reasoning/: match_subgraph.py  rule_store.py  schemas.py  thresholds.py
recon_platform/: e2e.py  registry.py  state.py
sample_data/: bank_source.csv  book.csv  demo_bank.csv  demo_book.csv
static/: index.html
tests/: test_a14_validation_hitl.py  test_baseline.py  test_c11_full_e2e.py  test_c11_integration.py  test_c14_hitl_e2e.py  test_c17_security.py  test_chaos.py  test_checkpointer.py  test_e2e.py  test_eval_harness.py  test_graph.py  test_guardrails_gateway.py  test_hitl.py  test_injection_guard.py  test_observability.py  test_regression_gate.py  test_routing.py  test_state_registry.py
(+44 files in other folders)
