[build-system]
requires = ["setuptools>=68.0,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-recon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.9.0",
    "chromadb>=0.5.0",
    "paramiko>=3.4.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.ruff]
line-length = 100
[tool.setuptools]
packages = ["datagents", "reasoning", "recon_platform"]